--- a/s/sh/sho/shortstack.com.html
+++ b/s/sh/sho/shortstack.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the shortstack.com privacy policy that was archived on 2013-05-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130506195518id_/http%3A//www.shortstack.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the shortstack.com privacy policy that was archived on 2013-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131227101900id_/http%3A//www.shortstack.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
   
@@ -24,7 +24,7 @@ library_tolerance=1500,
 use_existing_jquery=false,
 // DO NOT EDIT BELOW THIS LINE
 f=false,d=document;return{use_existing_jquery:function(){return use_existing_jquery;},library_tolerance:function(){return library_tolerance;},finish:function(){if(!f){f=true;var a=d.getElementById('_vis_opt_path_hides');if(a)a.parentNode.removeChild(a);}},finished:function(){return f;},load:function(a){var b=d.createElement('script');b.src=a;b.type='text/javascript';b.innerText;b.onerror=function(){_vwo_code.finish();};d.getElementsByTagName('head')[0].appendChild(b);},init:function(){settings_timer=setTimeout('_vwo_code.finish()',settings_tolerance);this.load('//dev.visualwebsiteoptimizer.com/j.php?a='+account_id+'&u='+encodeURIComponent(d.URL)+'&r='+Math.random());var a=d.createElement('style'),b='body{opacity:0 !important;filter:alpha(opacity=0) !important;background:none !important;}',h=d.getElementsByTagName('head')[0];a.setAttribute('id','_vis_opt_path_hides');a.setAttribute('type','text/css');if(a.styleSheet)a.styleSheet.cssText=b;else a.appendChild(d.createTextNode(b));h.appendChild(a);return settings_timer;}};}());_vwo_settings_timer=_vwo_code.init();
-</script><script src="//dev.visualwebsiteoptimizer.com/j.php?a=30919&amp;u=https%3A%2F%2Fweb.archive.org%2Fweb%2F20130506195518id_%2Fhttp%3A%2F%2Fwww.shortstack.com%2Fprivacy%2F&amp;r=0.7401201319212962" type="text/javascript"></script>
+</script><script src="//dev.visualwebsiteoptimizer.com/j.php?a=30919&amp;u=https%3A%2F%2Fweb.archive.org%2Fweb%2F20131227101900id_%2Fhttp%253A%2F%2Fwww.shortstack.com%2Fprivacy&amp;r=0.7180102328529232" type="text/javascript"></script>
 <!-- End Visual Website Optimizer Asynchronous Code -->
   
   
@@ -151,14 +151,18 @@ f=false,d=document;return{use_existing_jquery:function(){return use_existing_jqu
   </div>
   <div class="follow_bar">
     <div class="content">
-      <div class="two-col">
+      <div class="three-col">
         <div class="col1">
-          <a target="_blank" href="http://www.facebook.com/shortstacklab"><img alt="Be our Fan on Facebook" src="https://d2xcq4qphg1ge9.cloudfront.net/assets/7/842932/original_logo-fb-alpha.png"></a>
-          <a target="_blank" href="http://www.facebook.com/shortstacklab">Be our Fan | facebook.com/shortstacklab</a>
+          <a target="_blank" href="http://www.facebook.com/shortstacklab"><img alt="Be our Fan on Facebook" src="../img/logo-social-facebook.png"></a>
+          <a target="_blank" href="http://www.facebook.com/shortstacklab">Like us</a>
         </div>
         <div class="col2">
-          <a target="_blank" href="http://www.twitter.com/shortstacklab"><img alt="Follow us on Twitter" src="../img/logo-tw-alpha.png"></a>
-          <a target="_blank" href="http://www.twitter.com/shortstacklab">Stalk Us | @shortstacklab</a>
+          <a target="_blank" href="http://www.twitter.com/shortstacklab"><img alt="Follow us on Twitter" src="../img/logo-social-twitter.png"></a>
+          <a target="_blank" href="http://www.twitter.com/shortstacklab">Follow us</a>
+        </div>
+        <div class="col3">
+          <a target="_blank" href="http://www.linkedin.com/company/shortstack-com"><img alt="Follow us on Linked In" src="../img/logo-social-linkedin.png"></a>
+          <a target="_blank" href="http://www.linkedin.com/company/shortstack-com">Join us</a>
         </div>
       </div>
     </div>
@@ -173,24 +177,28 @@ f=false,d=document;return{use_existing_jquery:function(){return use_existing_jqu
               - Yes, it's awesome
             </li>
             <li>
+              <a href="/pricing">Pricing</a>
+              - The best deal on the block
+            </li>
+            <li>
               <a href="/about-facebook-apps">About</a>
               - Who are these guys anyway?
+            </li>
+            <li>
+              <a href="/facebook-page-faq">FAQs</a>
+              - 97% chance your answer is here
+            </li>
+            <li>
+              <a href="/facebook-page-webinars">Webinars</a>
+              - Helpful weekly webinars
             </li>
             <li>
               <a href="/newsroom">Newsroom</a>
               - The latest from ShortStack
             </li>
             <li>
-              <a href="/pricing">Pricing</a>
-              - The best deal on the block
-            </li>
-            <li>
-              <a href="/facebook-page-faq">FAQs</a>
-              - 97 percent chance your answer is here
-            </li>
-            <li>
-              <a href="/facebook-page-webinars">Webinars</a>
-              - Helpful weekly webinars
+              <a href="/case-studies">Case Studies</a>
+              - View user success stories
             </li>
           </ul>
         </div>
@@ -205,7 +213,7 @@ f=false,d=document;return{use_existing_jquery:function(){return use_existing_jqu
               - Yeah, we've got you covered
             </li>
             <li>
-              <a target="_blank" href="http://help.shortstackapp.com">Documentation</a>
+              <a target="_blank" href="http://help.shortstackapp.com">Help Docs</a>
               - Everything you need to know
             </li>
             <li>
@@ -229,8 +237,8 @@ f=false,d=document;return{use_existing_jquery:function(){return use_existing_jqu
         <div class="col3">
           <ul>
             <li>
-              <a href="/master-directory">Need a ShortStack Designer?</a>
-              - Hire a Master
+              <a href="/master-directory">ShortStack Masters</a>
+              - Hire a designer
             </li>
             <li>
               <a href="/contact">Contact Us</a>
@@ -238,7 +246,7 @@ f=false,d=document;return{use_existing_jquery:function(){return use_existing_jqu
             </li>
             <li>
               <a href="/tos/#refunds">Refund Policy</a>
-              - This is why we have a free plan
+              - Why we have a free plan
             </li>
             <li>
               <a target="_blank" href="http://referral.shortstacklab.com/">Referral Program</a>
@@ -303,9 +311,16 @@ f=false,d=document;return{use_existing_jquery:function(){return use_existing_jqu
   </script>
   <!-- Snapengage top -->
   <script type="text/javascript">
+  function pingImprovely(){
+    var $image = $('<img src="https://shortstack.iljmp.com/1/mgrny" height="0" width="0" style="display:none;"/>');
+    $image.appendTo('body');
+  }
   document.write(unescape("%3Cscript src='//www.snapengage.com/snapabug.js' type='text/javascript'%3E%3C/script%3E"));</script><script src="//www.snapengage.com/snapabug.js" type="text/javascript"></script><script type="text/javascript">
   SnapABug.setButton("/img/snap-btn.png");
   SnapABug.addButton("12bed29d-fc46-4a1d-ab7d-a0625e4a8233","0","30%");
+  SnapABug.setCallback('ChatMessageSent', function(agent, msg) {
+   pingImprovely();
+  });
   </script>
   <!-- Snapengage bottom -->
   <script type="text/javascript">
