--- a/b/be/bel/bellevuecollege.edu.html
+++ b/b/be/bel/bellevuecollege.edu.html
@@ -1,27 +1,27 @@
-<!--The following is the downloaded HTML source of the bellevuecollege.edu privacy policy that was archived on 2013-05-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130526160041id_/http%3A//bellevuecollege.edu/website/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bellevuecollege.edu privacy policy that was archived on 2013-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131227170030id_/http%3A//www.bellevuecollege.edu/website/privacy/%3Fref%3Dfooter) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><!-- InstanceBegin template="/Templates/bellevue.dwt.asp" codeOutsideHTMLIsLocked="false" --><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <!-- InstanceBeginEditable name="doctitle" -->
 <title>Bellevue College Website Privacy Notice </title>
 <!-- InstanceEndEditable -->
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width = 970">
+
 <link rel="shortcut icon" href="/bellevue.ico" type="image/x-icon">
 <link rel="icon" href="/bellevue.ico" type="image/x-icon">
 
-<meta name="viewport" content="width = 970">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-<link href="/globals/btheme_v0.1/css/btheme_v0.1.2.css" rel="stylesheet" type="text/css">
-<link href="/styles/btheme.v1.5/btheme.05a.css" rel="stylesheet" type="text/css">
+<link href="/globals/btheme_v0.1/css/btheme_v0.1.3.css" rel="stylesheet" type="text/css">
+<link href="/styles/btheme.v1.5/btheme.05b.css" rel="stylesheet" type="text/css">
 
 <!--[if IE 7]>
 <link href="/globals/btheme_v0.1/css/ie7.css" rel="stylesheet" type="text/css" />
 <link href="/styles/btheme.v1.5/btheme-ie7.00.css" rel="stylesheet" type="text/css" />
 <![endif]-->
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script type="text/javascript" src="/styles/btheme.v1.5/bellevue.01.js"></script>
+<script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script type="text/javascript" src="/styles/btheme.v1.5/bellevue.01.js?v=01.5.02"></script>
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
 <!-- InstanceParam name="Site Columns" type="text" value="nonav" -->
@@ -60,8 +60,8 @@
 						<li id="mainnav-classes" class="mainnav-item"><a href="http://bellevuecollege.edu/classes/" class="mainnav-link"><span class="inner"><span class="inner2"><span class="inner3">Classes</span></span></span></a></li>
 						<li id="mainnav-programs" class="mainnav-item"><a href="http://bellevuecollege.edu/programs/" class="mainnav-link"><span class="inner"><span class="inner2"><span class="inner3">Programs of Study</span></span></span></a></li>
 						<li id="mainnav-enrollment" class="mainnav-item"><a href="http://bellevuecollege.edu/enrollment/" class="mainnav-link"><span class="inner"><span class="inner2"><span class="inner3">Enrollment</span></span></span></a></li>
-						<li id="mainnav-resources" class="mainnav-item"><a href="http://bellevuecollege.edu/resources/" class="mainnav-link"><span class="inner"><span class="inner2"><span class="inner3">Campus Resources</span></span></span></a></li>
-						<li id="mainnav-news" class="mainnav-item"><a href="http://news.bellevuecollege.edu/" class="mainnav-link"><span class="inner"><span class="inner2"><span class="inner3">News &amp; Events</span></span></span></a></li>
+						<li id="mainnav-resources" class="mainnav-item"><a href="http://bellevuecollege.edu/resources/" class="mainnav-link"><span class="inner"><span class="inner2"><span class="inner3">Services</span></span></span></a></li>
+						<li id="mainnav-campuslife" class="mainnav-item"><a href="http://bellevuecollege.edu/campuslife/" class="mainnav-link"><span class="inner"><span class="inner2"><span class="inner3">Campus Life</span></span></span></a></li>
 						<li id="mainnav-about" class="mainnav-item"><a href="http://bellevuecollege.edu/about/" class="mainnav-link"><span class="inner"><span class="inner2"><span class="inner3">About Us</span></span></span></a></li>
 					</ul>
 				</div>
@@ -228,13 +228,15 @@
     <p>Bellevue College reserves the right to in its discretion, to change or modify all or any part of  these terms and conditions at any time, effective immediately upon notice  published on this web site.&nbsp; &nbsp;</p>
     <h2 id="contactprivacy">Bellevue College Contact Information</h2>
     <p>To review your personal information, or request correction  of your personal information, you may contact Bellevue College as follows:</p>
-    <p>Robin Young, Associate  Dean of Enrollment Services<br>
-      Student Services, Room B125N<br>
-      Bellevue College<br>
-      3000 Landerholm Circle SE<br>
-      Bellevue, WA 98007<br>
-      Fax: (425) 564Phone: (425) 564-2362<br>
-      E-mail: <a href="mailto:ryoung@bellevuecollege.edu">ryoung@bellevuecollege.edu</a></p>
+    <p>Matt Groshong, 
+      Interim Registrar <br>
+      Student Services, Room B125Q <br>
+      Bellevue College <br>
+      3000 Landerholm Circle SE <br>
+      Bellevue, WA 98007 <br>
+      Fax: (425) 564-6181 <br>
+      Phone: (425) 564-5608 <br>
+      E-mail: <a href="mailto:matt.groshong@bellevuecollege.edu">matt.groshong@bellevuecollege.edu</a></p>
     <p>To offer comments about Bellevue College’s website or about  the information presented in this Privacy Notice:</p>
     <p>Information Resources<br>
       Mailstop N215<br>
@@ -261,7 +263,7 @@
 				<div id="bigfoot-inner"><div id="bigfoot-inner2"><div id="bigfoot-inner3"><div id="bigfoot-inner4">
 				<h2>Footer Navigation</h2>
 	        	<div class="grid4">
-	            	<form action="http://bellevuecollege.edu/search/" method="get" class="searchform">
+	            	<form action="http://www.bellevuecollege.edu/search/" method="get" class="searchform">
 	            		<h3><label for="footsearchbox">Search bellevuecollege.edu</label></h3>
 	                    <div class="searchbox">
 						<div class="search-line"></div>
@@ -271,8 +273,8 @@
 	            	</form>
 	            	<ul class="search-sub-links">
 	           	    	<li><a href="/directory/">Employee Search</a></li>
-	                    <li><a href="#">A-Z Index</a></li>
-	                    <li><a href="#">Programs A-Z</a></li>
+	                    <li><a href="/directories/az/">A-Z Index</a></li>
+	                    <li><a href="/programs/az/">Programs A-Z</a></li>
 	                </ul>
 				<div class="social-media">
 	              <h3>Connect with us</h3>  
@@ -282,7 +284,7 @@
 	                	<li><a href="http://flickr.com/bellevuecollege/"><img src="/globals/btheme_v0.1/img/flickr.png" width="24" height="24" alt="Flickr"></a></li>
 	                	<li><a href="http://www.youtube.com/bellevuecollege"><img src="/globals/btheme_v0.1/img/youtube.png" width="24" height="24" alt="YouTube"></a></li>
 						<li><a href="http://www.linkedin.com/groups?mostPopular=&amp;gid=159925"><img src="/globals/btheme_v0.1/img/linkedin.png" width="24" height="24" alt="YouTube"></a></li>
-						<li><a href="http://bellevuecollege.edu/social/">More Social...</a></li>
+						<li><a href="http://www.bellevuecollege.edu/social/">More Social...</a></li>
 	           	   </ul>
 				</div>
 	            </div>
@@ -290,46 +292,46 @@
 	            <div class="grid2">
 	            	<h3>General info</h3>
 	            	<ul>
-	                	<li><a href="/contacts/">Contact Us</a></li>
-	                    <li><a href="/about/gettinghere/">Maps &amp; Directions</a></li>
-	                    <li><a href="http://news.bellevuecollege.edu">News &amp; Events</a></li>
-						<li><a href="http://bellevuecollege.edu/joblist/">Jobs</a></li>
-	                    <li><a href="https://bellevuecollege.edu/foundation/donate/">Donate</a></li>
+	                	<li><a href="http://www.bellevuecollege.edu/contacts/">Contact Us</a></li>
+                      <li><a href="http://www.bellevuecollege.edu/about/gettinghere/maps/">Maps</a> &amp; <a href="http://www.bellevuecollege.edu/about/around/directions/">Directions</a></li>
+                      <li><a href="http://www.bellevuecollege.edu/news/">News</a> &amp; <a href="http://www.bellevuecollege.edu/events/"> Events</a></li>
+                      <li><a href="http://www.bellevuecollege.edu/jobs/">Jobs</a></li>
+                      <li><a href="https://www.bellevuecollege.edu/foundation/donate/">Donate</a></li>
 	                </ul>
 	            </div>
 	            <div class="grid2">
 	            	<h3>Menus for</h3>
 	            	<ul>
-	                	<li><a href="http://bellevuecollege.edu/students/">Students</a></li>
-						<li><a href="http://bellevuecollege.edu/future/">Future Students</a></li>
-	                    <li><a href="http://bellevuecollege.edu/employees/">Faculty &amp; Staff</a></li>
-	                    <li><a href="http://bellevuecollege.edu/businesses/">Businesses</a></li>
-	                    <li><a href="http://bellevuecollege.edu/visitors/">Visitors &amp; Community</a></li>
+	                	<li><a href="http://www.bellevuecollege.edu/students/">Students</a></li>
+                        <li><a href="http://www.bellevuecollege.edu/future/">Future Students</a></li>
+                        <li><a href="http://www.bellevuecollege.edu/employees/">Faculty &amp; Staff</a></li>
+                        <li><a href="http://www.bellevuecollege.edu/businesses/">Businesses</a></li>
+                        <li><a href="http://www.bellevuecollege.edu/visitors/">Visitors &amp; Community</a></li>
 	                </ul>
 	            </div>
 	            <div class="grid2">
 	            	<h3>Popular searches</h3>
 	            	<ul>
-	                	<li><a href="/athletics/">Athletics</a></li>
-	                    <li><a href="/bookstore/">Bookstore</a></li>
-						<li><a href="/enrollment/financial/">Financial Assistance</a></li>
-	                    <li><a href="/lmc/">Library</a></li>
+	                	<li><a href="http://www.bellevuecollege.edu/athletics/">Athletics</a></li>
+	                    <li><a href="http://www.bellevuecollege.edu/bookstore/">Bookstore</a></li>
+						<li><a href="http://www.bellevuecollege.edu/enrollment/financial/">Financial Assistance</a></li>
+	                    <li><a href="http://www.bellevuecollege.edu/lmc/">Library</a></li>
 	                </ul>
 	            </div>
 				<div class="grid2">
 	            	<h3>Student links</h3>
 	            	<ul>
 	                	<li><a href="https://mail.bellevuecollege.edu/">E-mail</a></li>
-						<li><a href="http://mybcc.net/"><i>My</i>BC</a></li>
-						<li><a href="http://bellevuecollege.edu/canvas/">Canvas</a></li>
-						<li><a href="/enrollment/registration/register/">Registration</a></li>
-	                    <li><a href="/enrollment/records/">Records &amp; Grades</a></li>
+                        <li><a href="http://mybcc.net/"><i>My</i>BC</a></li>
+                        <li><a href="http://www.bellevuecollege.edu/canvas/">Canvas</a></li>
+                        <li><a href="http://www.bellevuecollege.edu/enrollment/registration/register/">Registration</a></li>
+                        <li><a href="http://www.bellevuecollege.edu/enrollment/records/">Records &amp; Grades</a></li>
 	                </ul>
 	            </div>
 				</div>
 		<div id="bellevueaddressinfo"><h3>Contact info</h3>
 	    <div id="bellevueaddress" class="vcard">
-	    	<span class="url fn"><a href="/" title="Bellevue College home page">Bellevue College</a></span>
+	    	<span class="url fn"><a href="http://www.bellevuecollege.edu/" title="Bellevue College home page">Bellevue College</a></span>
 			<div class="adr">
 				<span class="street-address">3000 Landerholm Circle SE</span>
 				<span class="locality">Bellevue</span>,
@@ -356,133 +358,43 @@
  
 
 <script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+  var _gaq = _gaq || [];
+  var pluginUrl =
+ '//www.google-analytics.com/plugins/ga/inpage_linkid.js';
+  _gaq.push(['_require', 'inpage_linkid', pluginUrl]);
+  _gaq.push(['_setAccount', 'UA-3966899-1']);
+  _gaq.push(['_setAllowLinker', true]);
+  _gaq.push(['_setDomainName', 'bellevuecollege.edu']);
+  _gaq.push(['_trackPageview']);
 
-<script type="text/javascript">
-/*main college tracker*/
-try {
-var pageTracker = _gat._getTracker("UA-3966899-1");
-pageTracker._setDomainName(".bellevuecollege.edu");
-pageTracker._setAllowLinker(true);
-pageTracker._setAllowHash(false);
-pageTracker._trackPageview();
-} catch (err) { }</script>
+  //multisite
+  _gaq.push(['multi._setAccount', 'UA-17566683-1']);
+  _gaq.push(['multi._setAllowLinker', true]);
+  _gaq.push(['multi._setDomainName', 'bellevuecollege.edu']);
+  _gaq.push(['multi._trackPageview']);
 
-<script type="text/javascript">
-/*multisite test setup*/
-try {
-var altpageTracker = _gat._getTracker("UA-17566683-1");
-altpageTracker._setDomainName(".bellevuecollege.edu");
-altpageTracker._setAllowLinker(true);
-altpageTracker._setAllowHash(false);
-altpageTracker._trackPageview();
-} catch (err) { }
+  //CE
+  _gaq.push(['ce._setAccount', 'UA-16482970-1']);
+  _gaq.push(['ce._setAllowLinker', true]);
+  _gaq.push(['ce._setDomainName', 'bellevuecollege.edu']);
+  _gaq.push(['ce._trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
 </script>
 
-<script type="text/javascript">
-/*ce tracker*/
-try {
-var mdtpageTracker = _gat._getTracker("UA-16482970-1");
-mdtpageTracker._setDomainName(".bellevuecollege.edu");
-mdtpageTracker._setAllowLinker(true);
-mdtpageTracker._setAllowHash(false);
-mdtpageTracker._trackPageview();
-} catch (err) { }
-</script>
+<script>
+/* New analytics.js tracking */
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-
-
-<script type="text/javascript">
-<!--
-$(function() { 
-	/*Track logo links*/
-	$('#logo a').each(function() {
-		var $a = $(this);
-		var href = $a.attr('href');
-		$a.click(function() {
-			pageTracker._trackPageview('/inlinks/logo/' + href);
-		});
-	});
-	
-	/*Track mainnav links*/
-	$('#nav > ul > li > a').each(function() {
-		var $a = $(this);
-		var href = $a.attr('href');
-		$a.click(function() {
-			pageTracker._trackPageview('/inlinks/mainnav/' + href);
-		});
-	});
-	
-	
-	/*Track mainnav dropdowns links*/
-	$('#nav ul ul a').each(function() {
-		var $a = $(this);
-		var href = $a.attr('href');
-		$a.click(function() {
-			pageTracker._trackPageview('/inlinks/mainnavdrop/' + href);
-		});
-	});
-	
-	
-	/*Track subnav links*/
-	$('#subnav a').each(function() {
-		var $a = $(this);
-		var href = $a.attr('href');
-		$a.click(function() {
-			pageTracker._trackPageview('/inlinks/subnav/' + href);
-		});
-	});
-	
-	/*Track breadcrumbs links*/
-	$('#breadcrumbs a').each(function() {
-		var $a = $(this);
-		var href = $a.attr('href');
-		$a.click(function() {
-			pageTracker._trackPageview('/inlinks/bread/' + href);
-		});
-	});
-	
-	
-	/*Track footer links*/
-	$('#bigfoot a').each(function() {
-		var $a = $(this);
-		var href = $a.attr('href');
-		$a.click(function() {
-			pageTracker._trackPageview('/inlinks/foot/' + href);
-		});
-	});
-	
-	$('#legalbar a').each(function() {
-		var $a = $(this);
-		var href = $a.attr('href');
-		$a.click(function() {
-			pageTracker._trackPageview('/inlinks/legalbar/' + href);
-		});
-	});
-	
-	/*Track external links*/
-	$('#content a').filter(function() {
-		var theHref = this;
-		if (theHref.hostname && theHref.hostname !== location.hostname) {
-			$(theHref).bind('click keypress', function(event) {
-				var code=event.charCode || event.keyCode;
-				if (!code || (code && code == 13)) {
-					if(pageTracker){
-						var fixedLink = this.href;
-						fixedLink = fixedLink.replace(/https?:\/\/(.*)/,"$1");
-						fixedLink = '/external/' + fixedLink;
-						pageTracker._trackPageview(fixedLink);
-					};
-				};
-			});
-		};
-	});
-
-
-});
--->
+  ga('create', 'UA-3966899-14', 'bellevuecollege.edu');
+  ga('send', 'pageview');
 </script>
 
 <!-- InstanceEnd -->
