--- a/e/en/ent/entertainmentcareers.net.html
+++ b/e/en/ent/entertainmentcareers.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the entertainmentcareers.net privacy policy that was archived on 2013-06-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130627090148id_/http%3A//www.entertainmentcareers.net/jobseeker/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the entertainmentcareers.net privacy policy that was archived on 2013-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131227210346id_/http%3A//www.entertainmentcareers.net/jobseeker/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!--      ******         BEGIN PAGE CODE          ******       --><!--      ******         END PAGE CODE            ******       --><!--      ******         START HTML               ******       --><head>
     <meta name="Author" content="Â©EntertainmentCareers.Net, Inc.">
@@ -44,13 +44,15 @@ width: 98%;
 
 		
             <span id="leaderboard">
+            
             <script type="text/javascript" async="" src="https://d31qbv1cthcecs.cloudfront.net/atrk.js"></script><script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">
             GA_googleFillSlot("ECN_ROS_Leader");
             </script>
-            </span>
         
+            </span>
+		
 
-		<a href="http://www.entertainmentcareers.net/jobseeker/browse.asp" class="tab selected">Job Seekers<span class="end"></span></a> 
+		<a href="http://www.entertainmentcareers.net/sbjobs/" class="tab selected">Job Seekers<span class="end"></span></a> 
 		<a href="http://www.entertainmentcareers.net/employer/" class="tab ">Employers<span class="end"></span></a> 
 	</div> 
 </div> 
@@ -186,7 +188,7 @@ This policy is powered by Trust Guard PCI compliance.</div><!-- END PRIVACY POLI
 				<a href="/jobseeker/privacy.asp">Privacy Policy</a> 
 			</div> 
 			<div class="section end"> 
-				<p>The security of your personal information is of paramount importance to us. We hire outside companies to test our security on a daily basis.<img src="/images/icon/secure/norton_truste.png" alt="BBB Online" width="225" height="51"></p> 
+				<p>The security of your personal information is of paramount importance to us. We hire outside companies to test our security on a daily basis.<img src="//d1siwwo0kh614p.cloudfront.net/images/icon/secure/norton_truste.png" alt="BBB Online" width="225" height="51"></p> 
 			</div> 
             <div class="clear"></div>
 			<p id="legal">© 1999-2013 EntertainmentCareers.Net • 2118 Wilshire Blvd #401, Santa Monica, CA 90403
@@ -198,7 +200,6 @@ This policy is powered by Trust Guard PCI compliance.</div><!-- END PRIVACY POLI
 
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-616317-1']);
-  _gaq.push(['_setDomainName', '.entertainmentcareers.net']);
   _gaq.push(['_trackPageview']);
 
   (function() {
@@ -208,7 +209,6 @@ This policy is powered by Trust Guard PCI compliance.</div><!-- END PRIVACY POLI
   })();
 
 </script>
-
 <!-- Quantcast Tag -->
 <script type="text/javascript">
 var _qevents = _qevents || [];
