--- a/y/yo/you/yourlust.com.html
+++ b/y/yo/you/yourlust.com.html
@@ -1,51 +1,59 @@
-<!--The following is the downloaded HTML source of the yourlust.com privacy policy that was archived on 2012-06-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20120630112911id_/http%3A//yourlust.com/privacypolicy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the yourlust.com privacy policy that was archived on 2013-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131227223125id_/http%3A//yourlust.com/privacypolicy.php) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
+<!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml"><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	
  <title> Privacy Policy - free porn tube videos at YourLust.com!</title>
 
-		
-<meta name="description" content="">
+		<meta name="description" content="">
 <meta name="keywords" content="">
 
 
     <link href="http://screenshots.yourlust.com/styles/main.css" rel="stylesheet" type="text/css">
+    <link href="http://screenshots.yourlust.com/styles/community.css" rel="stylesheet" type="text/css">
     <link href="/rss.php" rel="alternate" type="application/rss+xml" title="Every Day Porn Tube Updates">
-	<script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
+	<script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 	<script type="text/javascript" src="/js/scripts.js"></script>
+
+        <script src="/js/jquery.js" type="text/javascript"></script>
+	<script type="text/javascript" src="/js/cookies.js"></script>
+
     <script type="text/javascript" src="/js/KernelTeamImageRotator.js"></script>
     <script type="text/javascript">
         KT_rotationEngineStartup(0.2, 0.5);
     </script>
-    <script type="text/javascript" src="http://yourlust.com/js/KernelTeamVideoSharingSystem_2.4.3.jsx"></script>
+    <script type="text/javascript" src="http://yourlust.com/js/KernelTeamVideoSharingSystem_3.2.0.jsx"></script>
     
 
 <script type="text/javascript">
+  var _gaq = _gaq || []; 
+	if (window.location.href.search('promoid=') != -1) {
+		var id = /promoid=([^&]*)/.exec(window.location.href)[1];
+		_gaq.push(['_setCustomVar', 1, 'promoid', id, 2]);
+		_gaq.push(['_setCustomVar', 2, 'type', 'vids', 2]);
+	}
+  _gaq.push(['_setVisitorCookieTimeout', 86400000]);
+  _gaq.push(['_setCampaignCookieTimeout', 86400000]);
 
-  var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-2977934-9']);
   _gaq.push(['_setDomainName', 'yourlust.com']);
   _gaq.push(['_trackPageview']);
-
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
-
 </script>
 
 </head>
 <body>
     <div id="header">
 	<a class="logo" href="http://www.yourlust.com/">Porn Tube Videos</a>
-	<div class="banner"><a href="http://yourlust.com/?action=redirect_adv&amp;id=1" rel="nofollow"><img src="http://screenshots.yourlust.com/im/yourlust570x80.png" alt="Become VIP member! View HD videos!"></a></div>
+	<div class="banner"><a href="http://yourlust.com/?action=redirect_adv&amp;id=1" rel="nofollow"><img src="http://screenshots.yourlust.com/im/vip-members.png" alt="Become VIP member! View HD videos!"></a></div>
 	 <div class="search_head">
   		 	<form class="form1" action="/search/">
 				<input class="inp1" type="text" name="q" value="Search" onfocus="javascript: if(this.value == 'Search') this.value = '';" onblur="javascript: if(this.value == '') { this.value = 'Search';}">
-				<input class="inp" type="image" src="http://screenshots.yourlust.com/images/btn_search.gif">
+				<input class="inp" type="submit" value="" style="background:url(http://screenshots.yourlust.com/images/btn_search.gif) no-repeat;width:40px;height:23px;border:0">
 			</form>
   		</div>
         <div id="main_menu">
@@ -54,30 +62,35 @@
             <li><a href="/latest-updates/" id="latest">Latest Updates</a></li>
             <li><a href="/top-rated/" id="tr">Top Rated</a></li>
             <li><a href="/most-popular/" id="popular">Most Viewed</a></li>
+            <li><a href="/top/" target="_blank">Featured Videos</a></li>
             <li><a href="/categories/" id="categories">Categories</a></li>
             <li><a href="/models/" id="models">Models</a></li>
+            <li><a href="/channels/" id="channels">Channels</a></li>
             <li><a href="/community/" id="community">Community</a></li>
-            <li class="old-blog2"><a href="http://www.yourlust.com/cs/dating/" target="_blank">FUCK BUDDY</a></li>
 		</ul>
             <div class="g_clear"></div>
         </div>
+        <div class="top_menu">
+	<ul>
+			<li><a href="/signup.php">Sign up</a></li>
+        <li><a href="/login.php">Login</a></li>
+		<li><a href="/invite_friend.php">Invite a Friend</a></li>
+		<li><a href="/support.php">Support</a></li>
+		</ul>
+        </div>
+
         <div class="topmenu">
 	   <ul>
-                <li><a target="_blank" href="http://m.yourlust.com" title="Free mobile porn videos">MOBILE VIDEOS</a></li>
+                <li><a target="_blank" href="http://m.yourlust.com" title="Free mobile porn videos" style="color: #ff7e00;">MOBILE VIDEOS</a></li>
+                <li><a target="_blank" href="http://anysex.com" title="Any Sex Videos">ANY SEX VIDEOS</a></li>
 		<li><a href="http://www.yourlust.com/reviews/" target="_blank" style="color: #ff7e00;">PORN REVIEWS</a></li>
 		<li><a href="http://www.erotica7.com" target="_blank">EROTICA PICS</a></li>
 	   </ul>
         </div>
 
-	<div class="tmenu">
-		<ul>
-			<li class="twitter"><a target="_blank" href="http://twitter.com/yourlustporn">FOLLOW US ON TWITTER</a></li>
-		</ul>
-	</div>
-
     </div>
 <div id="data">
-    <div id="wide_col">
+    <div>
         <h1 class="block_header">Privacy Policy</h1>
         <div class="text_content ppage">
 <p><b>Updated May 31, 2012</b></p>
@@ -129,21 +142,7 @@
 <p>You are entitled to access, correct or delete your information on the Website and may request us to do so by contacting us at <a href="mailto:mail@yourlust.com">mail@yourlust.com</a></p>
       </div>
     </div>
-    <div id="side_col">
-        <div class="main_member_menu">
-	<div class="block_header">Member menu</div>
-	<ul>
-			<li><b>Member's Features:</b></li>
-			<li>- Upload Your Sex Videos</li>
-			<li>- Create Favorites Collection</li>
-			<li>- Community Private Messages</li>
-			<li><!-- &nbsp; --></li>
-					<li><a href="/signup.php">Sign up</a></li>
-            <li><a href="/login.php">Login</a></li>
-			<li><a href="/invite_friend.php">Invite a Friend</a></li>
-			<li><a href="/support.php">Support</a></li>
-			</ul>
-</div>    </div>
+   
     <div class="g_clear"></div>
 </div>
 
@@ -163,7 +162,8 @@
             <a href="/dmca.php">DMCA</a> | 
             <a href="/2257.php">2257</a> | 
             <a href="/advertisement.html">Advertisement</a>
-            <div class="copyright">Copyright © 2004-2012&nbsp;YourLust.Com</div>
+            <div class="copyright">Copyright © 2004-2013&nbsp;YourLust.Com</div>
+
         </div>
     </div>
 
@@ -176,15 +176,18 @@
 </script>
 
 <script type="text/javascript">
+var rd=Math.floor(Math.random()*100000);
 <!--//<![CDATA[
 var url = (location.protocol=='https:'?'https://www.yourlustmedia.com/spots/sp/delivery/js.php':'http://www.yourlustmedia.com/spots/sp/delivery/js.php');
-document.write ("<scr"+"ipt type='text/javascript' src='"+ url +"?advplaces=13'><\/scr"+"ipt>");
+document.write ("<scr"+"ipt type='text/javascript' src='"+ url +"?advplaces=13&rd="+ rd +"'><\/scr"+"ipt>");
 //]]>-->
-</script><script type="text/javascript" src="https://www.yourlustmedia.com/spots/sp/delivery/js.php?advplaces=13"></script>
+</script><script type="text/javascript" src="https://www.yourlustmedia.com/spots/sp/delivery/js.php?advplaces=13&amp;rd=78205"></script>
 
 
 
 <!-- Vep6GloyretJemAt -->
+
+<script src="/cookie.jsx"></script>
 
 
 </body></html>
